// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 PrSNy"
    disabled={false}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="1"
    type="button"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 jylWBN Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
      id={null}
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 jvANIo"
        fontSize="0.879em"
        fontWeight={600}
        htmlFor={null}
        letterSpacing="0.4px"
      >
        Button Label
      </label>
    </section>
  </button>
</div>
`;

exports[` 2`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 PrSNy"
    disabled={false}
    htmlFor={null}
    id={null}
    name={null}
    onClick={[Function]}
    tabIndex="1"
    type="button"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 jylWBN Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
      id={null}
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 jvANIo"
        fontSize="0.879em"
        fontWeight={600}
        htmlFor={null}
        letterSpacing="0.4px"
      >
        Click Me!
      </label>
    </section>
  </button>
</div>
`;

exports[` 3`] = `
<button
  className="Button__StyledButton-sc-1v7sls2-0 PrSNy"
  disabled={false}
  htmlFor={null}
  id={null}
  name={null}
  onClick={null}
  tabIndex="1"
  type="button"
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 jylWBN Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
    id={null}
    rows={null}
  >
    <label
      className="Typography__StyledLabel-sc-19auepv-0 jvANIo"
      fontSize="0.879em"
      fontWeight={600}
      htmlFor={null}
      letterSpacing="0.4px"
    >
      Standard Button
    </label>
  </section>
</button>
`;

exports[` 4`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 cRSilm Button__GroupWrapper-sc-1v7sls2-2 jpfPZd"
  id={null}
  rows={null}
>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 PrSNy"
    disabled={false}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="1"
    type="button"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 jylWBN Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
      id={null}
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 jvANIo"
        fontSize="0.879em"
        fontWeight={600}
        htmlFor={null}
        letterSpacing="0.4px"
      >
        Standard
      </label>
    </section>
  </button>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 hkSjVt"
    disabled={false}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="1"
    type="button"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 jylWBN Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
      id={null}
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 jvANIo"
        fontSize="0.879em"
        fontWeight={600}
        htmlFor={null}
        letterSpacing="0.4px"
      >
        Solid
      </label>
    </section>
  </button>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 bFnwvU"
    disabled={false}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="1"
    type="button"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 jylWBN Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
      id={null}
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 jvANIo"
        fontSize="0.879em"
        fontWeight={600}
        htmlFor={null}
        letterSpacing="0.4px"
      >
        Round
      </label>
    </section>
  </button>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 dzJrcb"
    disabled={false}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="1"
    type="button"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 jylWBN Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
      id={null}
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 jvANIo"
        fontSize="0.879em"
        fontWeight={600}
        htmlFor={null}
        letterSpacing="0.4px"
      >
        Solid Round
      </label>
    </section>
  </button>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 dHqqoa"
    disabled={false}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="1"
    type="button"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 jylWBN Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
      id={null}
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 jvANIo"
        fontSize="0.879em"
        fontWeight={600}
        htmlFor={null}
        letterSpacing="0.4px"
      >
        Plain
      </label>
    </section>
  </button>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 caABMl"
    disabled={false}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="1"
    type="button"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 jylWBN Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
      id={null}
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 jvANIo"
        fontSize="0.879em"
        fontWeight={600}
        htmlFor={null}
        letterSpacing="0.4px"
      >
        Underlined
      </label>
    </section>
  </button>
</section>
`;

exports[` 5`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 fyTJwb Button__GroupWrapper-sc-1v7sls2-2 jpfPZd"
  id={null}
  rows={null}
>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 PrSNy"
    disabled={false}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="1"
    type="button"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 jylWBN Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
      id={null}
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 jvANIo"
        fontSize="0.879em"
        fontWeight={600}
        htmlFor={null}
        letterSpacing="0.4px"
      >
        Button
      </label>
    </section>
  </button>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 PrSNy"
    disabled={false}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="1"
    type="reset"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 jylWBN Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
      id={null}
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 jvANIo"
        fontSize="0.879em"
        fontWeight={600}
        htmlFor={null}
        letterSpacing="0.4px"
      >
        Reset
      </label>
    </section>
  </button>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 PrSNy"
    disabled={false}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="1"
    type="submit"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 jylWBN Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
      id={null}
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 jvANIo"
        fontSize="0.879em"
        fontWeight={600}
        htmlFor={null}
        letterSpacing="0.4px"
      >
        Submit
      </label>
    </section>
  </button>
</section>
`;

exports[` 6`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 cRSilm Button__GroupWrapper-sc-1v7sls2-2 jpfPZd"
  id={null}
  rows={null}
>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 ciildJ"
    disabled={false}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="1"
    type="button"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 jylWBN Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
      id={null}
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 jvANIo"
        fontSize="0.879em"
        fontWeight={600}
        htmlFor={null}
        letterSpacing="0.4px"
      >
        Info
      </label>
    </section>
  </button>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 kIlLoC"
    disabled={false}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="1"
    type="button"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 jylWBN Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
      id={null}
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 jvANIo"
        fontSize="0.879em"
        fontWeight={600}
        htmlFor={null}
        letterSpacing="0.4px"
      >
        Solid Info
      </label>
    </section>
  </button>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 gqVIPO"
    disabled={false}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="1"
    type="button"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 jylWBN Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
      id={null}
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 jvANIo"
        fontSize="0.879em"
        fontWeight={600}
        htmlFor={null}
        letterSpacing="0.4px"
      >
        Success
      </label>
    </section>
  </button>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 knQEvv"
    disabled={false}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="1"
    type="button"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 jylWBN Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
      id={null}
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 jvANIo"
        fontSize="0.879em"
        fontWeight={600}
        htmlFor={null}
        letterSpacing="0.4px"
      >
        Solid Success
      </label>
    </section>
  </button>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 khvLby"
    disabled={false}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="1"
    type="button"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 jylWBN Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
      id={null}
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 jvANIo"
        fontSize="0.879em"
        fontWeight={600}
        htmlFor={null}
        letterSpacing="0.4px"
      >
        Warning
      </label>
    </section>
  </button>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 eiYEaL"
    disabled={false}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="1"
    type="button"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 jylWBN Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
      id={null}
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 jvANIo"
        fontSize="0.879em"
        fontWeight={600}
        htmlFor={null}
        letterSpacing="0.4px"
      >
        Solid Warning
      </label>
    </section>
  </button>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 fMihJG"
    disabled={false}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="1"
    type="button"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 jylWBN Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
      id={null}
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 jvANIo"
        fontSize="0.879em"
        fontWeight={600}
        htmlFor={null}
        letterSpacing="0.4px"
      >
        Alert
      </label>
    </section>
  </button>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 kEOjpB"
    disabled={false}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="1"
    type="button"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 jylWBN Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
      id={null}
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 jvANIo"
        fontSize="0.879em"
        fontWeight={600}
        htmlFor={null}
        letterSpacing="0.4px"
      >
        Solid Alert
      </label>
    </section>
  </button>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 cVlxOr"
    disabled={false}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="1"
    type="button"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 jylWBN Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
      id={null}
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 jvANIo"
        fontSize="0.879em"
        fontWeight={600}
        htmlFor={null}
        letterSpacing="0.4px"
      >
        Neutral
      </label>
    </section>
  </button>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 dpjTRJ"
    disabled={false}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="1"
    type="button"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 jylWBN Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
      id={null}
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 jvANIo"
        fontSize="0.879em"
        fontWeight={600}
        htmlFor={null}
        letterSpacing="0.4px"
      >
        Solid Neutral
      </label>
    </section>
  </button>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 ehVVHG"
    disabled={true}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="-1"
    type="button"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 jylWBN Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
      id={null}
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 jvANIo"
        fontSize="0.879em"
        fontWeight={600}
        htmlFor={null}
        letterSpacing="0.4px"
      >
        Disabled
      </label>
    </section>
  </button>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 bhDbmV"
    disabled={true}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="-1"
    type="button"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 jylWBN Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
      id={null}
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 jvANIo"
        fontSize="0.879em"
        fontWeight={600}
        htmlFor={null}
        letterSpacing="0.4px"
      >
        Solid Disabled
      </label>
    </section>
  </button>
</section>
`;

exports[` 7`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 fyTJwb Button__GroupWrapper-sc-1v7sls2-2 jpfPZd"
  id={null}
  rows={null}
>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 PrSNy"
    disabled={false}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="1"
    type="button"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 cgiVER Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
      id={null}
      rows={null}
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-user fa-w-14 Icon__StyledIcon-sc-1oa9m1v-1 gwuEuD"
        color={null}
        data-icon="user"
        data-prefix="far"
        focusable="false"
        fontSize="inherit"
        id={null}
        role="img"
        style={Object {}}
        viewBox="0 0 448 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M313.6 304c-28.7 0-42.5 16-89.6 16-47.1 0-60.8-16-89.6-16C60.2 304 0 364.2 0 438.4V464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48v-25.6c0-74.2-60.2-134.4-134.4-134.4zM400 464H48v-25.6c0-47.6 38.8-86.4 86.4-86.4 14.6 0 38.3 16 89.6 16 51.7 0 74.9-16 89.6-16 47.6 0 86.4 38.8 86.4 86.4V464zM224 288c79.5 0 144-64.5 144-144S303.5 0 224 0 80 64.5 80 144s64.5 144 144 144zm0-240c52.9 0 96 43.1 96 96s-43.1 96-96 96-96-43.1-96-96 43.1-96 96-96z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
      <label
        className="Typography__StyledLabel-sc-19auepv-0 jvANIo"
        fontSize="0.879em"
        fontWeight={600}
        htmlFor={null}
        letterSpacing="0.4px"
      >
        Profile
      </label>
    </section>
  </button>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 cPcgyo"
    disabled={false}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="1"
    type="button"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 juLdGP Button__LabelWrapper-sc-1v7sls2-1 crITLr"
      id={null}
      rows="max-content 1fr"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-user fa-w-14 Icon__StyledIcon-sc-1oa9m1v-1 gwuEuD"
        color={null}
        data-icon="user"
        data-prefix="far"
        focusable="false"
        fontSize="inherit"
        id={null}
        role="img"
        style={Object {}}
        viewBox="0 0 448 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M313.6 304c-28.7 0-42.5 16-89.6 16-47.1 0-60.8-16-89.6-16C60.2 304 0 364.2 0 438.4V464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48v-25.6c0-74.2-60.2-134.4-134.4-134.4zM400 464H48v-25.6c0-47.6 38.8-86.4 86.4-86.4 14.6 0 38.3 16 89.6 16 51.7 0 74.9-16 89.6-16 47.6 0 86.4 38.8 86.4 86.4V464zM224 288c79.5 0 144-64.5 144-144S303.5 0 224 0 80 64.5 80 144s64.5 144 144 144zm0-240c52.9 0 96 43.1 96 96s-43.1 96-96 96-96-43.1-96-96 43.1-96 96-96z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
      <label
        className="Typography__StyledLabel-sc-19auepv-0 jvANIo"
        fontSize="0.879em"
        fontWeight={600}
        htmlFor={null}
        letterSpacing="0.4px"
      >
        Profile
      </label>
    </section>
  </button>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 PrSNy"
    disabled={false}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="1"
    type="button"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 cgiVER Button__LabelWrapper-sc-1v7sls2-1 jeRPpb"
      id={null}
      rows={null}
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-plus fa-w-12 Icon__StyledIcon-sc-1oa9m1v-1 gwuEuD"
        color={null}
        data-icon="plus"
        data-prefix="far"
        focusable="false"
        fontSize="inherit"
        id={null}
        role="img"
        style={Object {}}
        viewBox="0 0 384 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M368 224H224V80c0-8.84-7.16-16-16-16h-32c-8.84 0-16 7.16-16 16v144H16c-8.84 0-16 7.16-16 16v32c0 8.84 7.16 16 16 16h144v144c0 8.84 7.16 16 16 16h32c8.84 0 16-7.16 16-16V288h144c8.84 0 16-7.16 16-16v-32c0-8.84-7.16-16-16-16z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </section>
  </button>
</section>
`;

exports[` 8`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 cRSilm Button__GroupWrapper-sc-1v7sls2-2 jpfPZd"
  id={null}
  rows={null}
>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 PrSNy"
    disabled={false}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="1"
    type="button"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 kKYaBx Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
      id={null}
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 jvANIo"
        fontSize="0.879em"
        fontWeight={600}
        htmlFor={null}
        letterSpacing="0.4px"
      >
        Count Button
      </label>
      <div
        className="Tag__TagContainer-sc-128kb3h-0 lcEzps"
        id={null}
        label="2"
      >
        <label
          className="Typography__StyledLabel-sc-19auepv-0 lgicJH"
          fontSize="0.68em"
          fontWeight={600}
          htmlFor={null}
          letterSpacing="1px"
        >
          2
        </label>
      </div>
    </section>
  </button>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 PrSNy"
    disabled={false}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="1"
    type="button"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 hlNlKJ Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
      id={null}
      rows={null}
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-user fa-w-14 Icon__StyledIcon-sc-1oa9m1v-1 gwuEuD"
        color={null}
        data-icon="user"
        data-prefix="far"
        focusable="false"
        fontSize="inherit"
        id={null}
        role="img"
        style={Object {}}
        viewBox="0 0 448 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M313.6 304c-28.7 0-42.5 16-89.6 16-47.1 0-60.8-16-89.6-16C60.2 304 0 364.2 0 438.4V464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48v-25.6c0-74.2-60.2-134.4-134.4-134.4zM400 464H48v-25.6c0-47.6 38.8-86.4 86.4-86.4 14.6 0 38.3 16 89.6 16 51.7 0 74.9-16 89.6-16 47.6 0 86.4 38.8 86.4 86.4V464zM224 288c79.5 0 144-64.5 144-144S303.5 0 224 0 80 64.5 80 144s64.5 144 144 144zm0-240c52.9 0 96 43.1 96 96s-43.1 96-96 96-96-43.1-96-96 43.1-96 96-96z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
      <label
        className="Typography__StyledLabel-sc-19auepv-0 jvANIo"
        fontSize="0.879em"
        fontWeight={600}
        htmlFor={null}
        letterSpacing="0.4px"
      >
        Count Button
      </label>
      <div
        className="Tag__TagContainer-sc-128kb3h-0 lcEzps"
        id={null}
        label="2"
      >
        <label
          className="Typography__StyledLabel-sc-19auepv-0 lgicJH"
          fontSize="0.68em"
          fontWeight={600}
          htmlFor={null}
          letterSpacing="1px"
        >
          2
        </label>
      </div>
    </section>
  </button>
</section>
`;
